--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.content {
+main {
   width: 100%;
   height: 100%;
   padding-top: 120px;
