--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 
   --dark-blue: #2762b1;
   --light-blue: #b9dffc;
-  --dark-yellow: #ff9f0e;
+  --dark-yellow: #ff7a00;
   --light-yellow: #ffdb95;
   --green: #00a473;
   --red: #fd5f3f;
   --red-hover: #ca4c32;
-  --yellow-hover: #cc7f0b;
+  --yellow-hover: #cc6200;
   --green-hover: #00835c;
   --blue-hover: #1f4e8e;
   --bw-30: #b3b3b3;
