--- a/style.css
+++ b/style.css
@@ -1016,10 +1016,11 @@ footer {
 
 @media (max-width: 600px) {
   h1 {
-    font-size: 20px;
+    font-size: 18px;
   }
+
   h2 {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   h3 {
@@ -1045,11 +1046,12 @@ footer {
       flex-flow: column nowrap;
       align-items: start;
       gap: 0;
+      padding: 12px 24px;
     }
 
     .tablet-button {
       border-radius: 10px;
-      padding: 6px 16px 4px 20px;
+      padding: 6px 18px 4px 20px;
 
       img {
         width: 16px;
@@ -1063,20 +1065,41 @@ footer {
 
   .sidebar-content {
     width: 100%;
-    padding: 2px 24px 6px;
+    padding: 0px 18px 4px;
     button {
       font-size: 12px;
       width: fit-content;
-      padding: 14px 26px 12px;
+      padding: 12px 24px 10px;
       border-radius: 14px;
     }
   }
 
   .program-content {
-    padding: 16px 24px;
-    gap: 16px;
+    padding: 12px 24px;
+    gap: 8px;
+
+    .program-intro {
+      gap: 4px;
+    }
+
     .description {
       font-size: 10px;
+    }
+  }
+
+  .grade-num {
+    font-size: 48px;
+    padding: 10px 0 0;
+    width: 80px;
+  }
+
+  .right-content {
+    padding: 0 16px;
+    .description {
+      max-height: 32px;
+      font-weight: 400;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
   }
 
@@ -1128,15 +1151,6 @@ footer {
   .columns,
   .sign-up {
     display: none;
-  }
-
-  .right-content {
-    .description {
-      max-height: 44px;
-      font-weight: 400;
-      text-overflow: ellipsis;
-      overflow: hidden;
-    }
   }
 
   .single-col {
